--- a/trunk/tester/nslogger.dproj
+++ b/trunk/tester/nslogger.dproj
@@ -159,6 +159,8 @@
         <DCCReference Include="Classes\RandomBuffer\uRandomBuffer.pas"/>
         <DCCReference Include="Classes\SSDInfo\uSSDInfo.pas"/>
         <DCCReference Include="Classes\SSDInfo\uSSDVersion.pas"/>
+        <DCCReference Include="Classes\Verifier\uCopyThread.pas"/>
+        <DCCReference Include="Classes\Verifier\uVerifyThread.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
