--- a/trunk/tester/nslogger.dproj
+++ b/trunk/tester/nslogger.dproj
@@ -161,6 +161,8 @@
         <DCCReference Include="Classes\SSDInfo\uSSDVersion.pas"/>
         <DCCReference Include="Classes\Verifier\uCopyThread.pas"/>
         <DCCReference Include="Classes\Verifier\uVerifyThread.pas"/>
+        <DCCReference Include="..\..\..\..\SWMEM\3. GStorage\trunk\tester\Classes\TGSMTAnalyzer\uGSMTAnalyzer.pas"/>
+        <DCCReference Include="Classes\Parser\uParser.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
