--- a/trunk/tester/nslogger.dproj
+++ b/trunk/tester/nslogger.dproj
@@ -58,6 +58,7 @@
         <Base>true</Base>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base)'!=''">
+        <DCC_OutputDRCFile>true</DCC_OutputDRCFile>
         <SanitizedProjectName>nslogger</SanitizedProjectName>
         <DCC_Namespace>System;Xml;Data;Datasnap;Web;Soap;Vcl;Vcl.Imaging;Vcl.Touch;Vcl.Samples;Vcl.Shell;$(DCC_Namespace)</DCC_Namespace>
         <Icon_MainIcon>$(BDS)\bin\delphi_PROJECTICON.ico</Icon_MainIcon>
@@ -137,17 +138,17 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="uMain.pas">
+        <DCCReference Include="Form.Main.pas">
             <Form>fMain</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="Modules\Etc\uStrFunctions.pas"/>
         <DCCReference Include="Modules\Windows\uFileFunctions.pas"/>
-        <DCCReference Include="uSetting.pas">
+        <DCCReference Include="Form.Setting.pas">
             <Form>fSetting</Form>
             <FormType>dfm</FormType>
         </DCCReference>
-        <DCCReference Include="uRetSel.pas">
+        <DCCReference Include="Form.Retention.pas">
             <Form>fRetSel</Form>
             <FormType>dfm</FormType>
         </DCCReference>
@@ -175,15 +176,15 @@
         <DCCReference Include="WindowsFileAPI\PhysicalDrive\Getter\uDiskGeometryGetter.pas"/>
         <DCCReference Include="WindowsFileAPI\PhysicalDrive\Getter\uDriveAvailabilityGetter.pas"/>
         <DCCReference Include="WindowsFileAPI\PhysicalDrive\Getter\uNCQAvailabilityGetter.pas"/>
-        <DCCReference Include="WindowsFileAPI\PhysicalDrive\Part\uBusPhysicalDrive.pas"/>
-        <DCCReference Include="WindowsFileAPI\PhysicalDrive\Part\uOSPhysicalDrive.pas"/>
+        <DCCReference Include="WindowsFileAPI\PhysicalDrive\Part\Device.BusPhysicalDrive.pas"/>
+        <DCCReference Include="WindowsFileAPI\PhysicalDrive\Part\Device.OSPhysicalDrive.pas"/>
         <DCCReference Include="WindowsFileAPI\Abstraction\uBufferInterpreter.pas"/>
-        <DCCReference Include="Objects\uSMARTValueList.pas"/>
-        <DCCReference Include="Objects\uPhysicalDrive.pas"/>
-        <DCCReference Include="Modules\uDatasizeUnit.pas"/>
-        <DCCReference Include="Modules\uTimeUnit.pas"/>
+        <DCCReference Include="Objects\Device.SMARTValueList.pas"/>
+        <DCCReference Include="Objects\Device.PhysicalDrive.pas"/>
+        <DCCReference Include="Modules\MeasureUnit.DataSize.pas"/>
+        <DCCReference Include="Modules\MeasureUnit.Time.pas"/>
         <DCCReference Include="Modules\uSizeStrings.pas"/>
-        <DCCReference Include="Objects\uSecurityDescriptor.pas"/>
+        <DCCReference Include="Objects\OS.SecurityDescriptor.pas"/>
         <DCCReference Include="Legacy\uLegacyTrimCommand.pas"/>
         <DCCReference Include="Legacy\uLegacyDiskFunctions.pas"/>
         <DCCReference Include="WindowsFileAPI\PhysicalDrive\List\uPhysicalDriveList.pas"/>
@@ -196,6 +197,9 @@
         <DCCReference Include="WindowsFileAPI\Partition\Getter\uPartitionExtentGetter.pas"/>
         <DCCReference Include="WindowsFileAPI\Partition\Getter\uFixedDriveListGetter.pas"/>
         <DCCReference Include="Resource\uLanguageSettings.pas"/>
+        <DCCReference Include="Classes\Setting.Test.pas"/>
+        <DCCReference Include="Classes\Setting.Test.ParamGetter.pas"/>
+        <DCCReference Include="Objects\Pattern.Singleton.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -255,6 +259,19 @@
                     <Excluded_Packages Name="$(BDSBIN)\dcloffice2k210.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dclofficexp210.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
                 </Excluded_Packages>
+                <Language>
+                    <Language Name="ProjectLang">$00000412</Language>
+                </Language>
+                <Resource_DLL_Projects>
+                    <Resource_DLL_Projects Name="Item0">영어(미국)*$00000409*ENU*ENU</Resource_DLL_Projects>
+                    <Resource_DLL_Projects Name="Item1">한국어(대한민국)*$00000412*KOR*KOR</Resource_DLL_Projects>
+                </Resource_DLL_Projects>
+                <RDP_Source_Files>
+                    <RDP_Source_Files Name="Item0">uMain.dfm</RDP_Source_Files>
+                    <RDP_Source_Files Name="Item1">uSetting.dfm</RDP_Source_Files>
+                    <RDP_Source_Files Name="Item2">uRetSel.dfm</RDP_Source_Files>
+                    <RDP_Source_Files Name="Item3">..\exe\bin\nslogger.drc</RDP_Source_Files>
+                </RDP_Source_Files>
             </Delphi.Personality>
             <Deployment>
                 <DeployFile LocalName="..\exe\bin\nslogger.exe" Configuration="Debug" Class="ProjectOutput">
