--- a/trunk/tester/nslogger.dproj
+++ b/trunk/tester/nslogger.dproj
@@ -152,17 +152,10 @@
             <Form>fRetention</Form>
             <FormType>dfm</FormType>
         </DCCReference>
-        <DCCReference Include="Classes\Tester\Trace.List.pas"/>
-        <DCCReference Include="Classes\Tester\Tester.Iterator.pas"/>
-        <DCCReference Include="Classes\Tester\Tester.Thread.pas"/>
-        <DCCReference Include="Classes\SaveFile\uErrorList.pas"/>
-        <DCCReference Include="Classes\SaveFile\uSaveFile.pas"/>
-        <DCCReference Include="Classes\RandomBuffer\uMTforDel.pas"/>
-        <DCCReference Include="Classes\RandomBuffer\uRandomBuffer.pas"/>
-        <DCCReference Include="Classes\Verifier\uCopyThread.pas"/>
-        <DCCReference Include="Classes\Verifier\uVerifyThread.pas"/>
-        <DCCReference Include="Classes\Parser\Parser.pas"/>
-        <DCCReference Include="Classes\Tester\uPreCondThread.pas"/>
+        <DCCReference Include="Classes\Mersenne.pas"/>
+        <DCCReference Include="Classes\Verifier.Thread.Copy.pas"/>
+        <DCCReference Include="Classes\Verifier.Thread.Verify.pas"/>
+        <DCCReference Include="Classes\Tester.Thread.Precondition.pas"/>
         <DCCReference Include="WindowsFileAPI\Abstraction\uInterfacedOSFile.pas"/>
         <DCCReference Include="WindowsFileAPI\Abstraction\uIoControlFile.pas"/>
         <DCCReference Include="WindowsFileAPI\Abstraction\uOSFile.pas"/>
@@ -179,11 +172,8 @@
         <DCCReference Include="WindowsFileAPI\PhysicalDrive\Part\Device.BusPhysicalDrive.pas"/>
         <DCCReference Include="WindowsFileAPI\PhysicalDrive\Part\Device.OSPhysicalDrive.pas"/>
         <DCCReference Include="WindowsFileAPI\Abstraction\uBufferInterpreter.pas"/>
-        <DCCReference Include="Objects\Device.SMARTValueList.pas"/>
-        <DCCReference Include="Objects\Device.PhysicalDrive.pas"/>
         <DCCReference Include="Modules\MeasureUnit.DataSize.pas"/>
         <DCCReference Include="Modules\MeasureUnit.Time.pas"/>
-        <DCCReference Include="Objects\OS.SecurityDescriptor.pas"/>
         <DCCReference Include="WindowsFileAPI\PhysicalDrive\List\uPhysicalDriveList.pas"/>
         <DCCReference Include="WindowsFileAPI\PhysicalDrive\ListGetter\Abstraction\uPhysicalDriveListGetter.pas"/>
         <DCCReference Include="WindowsFileAPI\PhysicalDrive\ListGetter\Auto\uAutoPhysicalDriveListGetter.pas"/>
@@ -193,23 +183,36 @@
         <DCCReference Include="WindowsFileAPI\Abstraction\uDriveListGetter.pas"/>
         <DCCReference Include="WindowsFileAPI\Partition\Getter\uPartitionExtentGetter.pas"/>
         <DCCReference Include="WindowsFileAPI\Partition\Getter\uFixedDriveListGetter.pas"/>
-        <DCCReference Include="Resource\uLanguageSettings.pas"/>
-        <DCCReference Include="Classes\Setting.Test.pas"/>
-        <DCCReference Include="Classes\Setting.Test.ParamGetter.pas"/>
-        <DCCReference Include="Objects\Pattern.Singleton.pas"/>
-        <DCCReference Include="Classes\Tester\Trace.Node.pas"/>
-        <DCCReference Include="Classes\Parser\Parser.Producer.pas"/>
-        <DCCReference Include="Classes\Parser\Parser.Consumer.pas"/>
-        <DCCReference Include="Classes\Parser\Parser.BufferStorage.pas"/>
-        <DCCReference Include="Classes\Parser\Parser.ReadBuffer.pas"/>
-        <DCCReference Include="Classes\Parser\Parser.Divider.pas"/>
-        <DCCReference Include="Classes\Tester\Trace.MultiList.pas"/>
+        <DCCReference Include="Modules\LanguageStrings.pas"/>
         <DCCReference Include="Modules\System.PCharVal.pas"/>
-        <DCCReference Include="Classes\Tester\Tester.CommandIssuer.pas"/>
-        <DCCReference Include="Classes\Tester\Tester.ToView.pas"/>
         <DCCReference Include="Modules\Log.Templates.pas"/>
         <DCCReference Include="Modules\Device.NumberExtractor.pas"/>
-        <DCCReference Include="WindowsFileAPI\File\Windows.FilePhysicalLocationGetter.pas"/>
+        <DCCReference Include="Classes\Device.PhysicalDrive.pas"/>
+        <DCCReference Include="Classes\Device.SMARTValueList.pas"/>
+        <DCCReference Include="Classes\ErrorList.pas"/>
+        <DCCReference Include="Classes\OS.SecurityDescriptor.pas"/>
+        <DCCReference Include="Classes\Parser.BufferStorage.pas"/>
+        <DCCReference Include="Classes\Parser.Consumer.pas"/>
+        <DCCReference Include="Classes\Parser.Divider.pas"/>
+        <DCCReference Include="Classes\Parser.pas"/>
+        <DCCReference Include="Classes\Parser.Producer.pas"/>
+        <DCCReference Include="Classes\Parser.ReadBuffer.pas"/>
+        <DCCReference Include="Classes\Pattern.Singleton.pas"/>
+        <DCCReference Include="Classes\RandomBuffer.pas"/>
+        <DCCReference Include="Classes\SaveFile.pas"/>
+        <DCCReference Include="Classes\SaveFile.SettingForm.pas"/>
+        <DCCReference Include="Classes\SaveFile.TesterIterator.pas"/>
+        <DCCReference Include="Classes\SaveFile.TesterThread.pas"/>
+        <DCCReference Include="Classes\Setting.Test.ParamGetter.InnerStorage.pas"/>
+        <DCCReference Include="Classes\Setting.Test.ParamGetter.pas"/>
+        <DCCReference Include="Classes\Setting.Test.pas"/>
+        <DCCReference Include="Classes\Tester.CommandIssuer.pas"/>
+        <DCCReference Include="Classes\Tester.Iterator.pas"/>
+        <DCCReference Include="Classes\Tester.Thread.pas"/>
+        <DCCReference Include="Classes\Tester.ToView.pas"/>
+        <DCCReference Include="Classes\Trace.List.pas"/>
+        <DCCReference Include="Classes\Trace.MultiList.pas"/>
+        <DCCReference Include="Classes\Trace.Node.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
