--- a/trunk/tester/nslogger.dproj
+++ b/trunk/tester/nslogger.dproj
@@ -5,8 +5,8 @@
         <FrameworkType>VCL</FrameworkType>
         <MainSource>nslogger.dpr</MainSource>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Debug</Config>
-        <Platform Condition="'$(Platform)'==''">Win64</Platform>
+        <Config Condition="'$(Config)'==''">Release</Config>
+        <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <TargetedPlatforms>3</TargetedPlatforms>
         <AppType>Application</AppType>
     </PropertyGroup>
@@ -211,8 +211,10 @@
         <DCCReference Include="Classes\Tester.Thread.pas"/>
         <DCCReference Include="Classes\Tester.ToView.pas"/>
         <DCCReference Include="Classes\Trace.List.pas"/>
-        <DCCReference Include="Classes\Trace.MultiList.pas"/>
+        <DCCReference Include="Classes\Trace.PartialList.pas"/>
         <DCCReference Include="Classes\Trace.Node.pas"/>
+        <DCCReference Include="WindowsFileAPI\CommandSet\Specific\uSCSICommandSet.pas"/>
+        <DCCReference Include="WindowsFileAPI\Interpreter\uSCSIBufferInterpreter.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
