--- a/trunk/tester/nslogger.dproj
+++ b/trunk/tester/nslogger.dproj
@@ -152,7 +152,6 @@
         <DCCReference Include="Classes\Verifier.Thread.Copy.pas"/>
         <DCCReference Include="Classes\Verifier.Thread.Verify.pas"/>
         <DCCReference Include="Classes\Tester.Thread.Precondition.pas"/>
-        <DCCReference Include="Modules\MeasureUnit.DataSize.pas"/>
         <DCCReference Include="Modules\MeasureUnit.Time.pas"/>
         <DCCReference Include="Modules\LanguageStrings.pas"/>
         <DCCReference Include="Modules\System.PCharVal.pas"/>
@@ -214,6 +213,7 @@
         <DCCReference Include="Classes\Device.SMART.Diff.pas"/>
         <DCCReference Include="WindowsFileAPI\Getter.DiskLayout.pas"/>
         <DCCReference Include="WindowsFileAPI\Partition.List.pas"/>
+        <DCCReference Include="WindowsFileAPI\MeasureUnit.DataSize.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
